# calunga-release-watcher

./: .dockerignore  .gitignore  Dockerfile  FINDINGS.md  PLAN.md  README.md  SESSION_NOTES.md  pyproject.toml
deploy/: configmap.yaml  deployment.yaml
examples/: build-pipelinerun.yaml  release-pipelinerun.yaml  release.yaml  snapshot.yaml  test-pipelinerun.yaml
plans/: feature-fluke-retry-mechanism.md
src/calunga_release_watcher/: analyzer.py  config.py  handlers.py  k8s.py  retrier.py  slack.py  tracker.py
tests/e2e/: conftest.py  test_analyze_failure.py
tests/e2e/fixtures/: README.md  build_failure.json  test_enterprise_contract_failure.json  test_multi_wheel_check_failure.json
tests/unit/: conftest.py  test_analyzer.py  test_config.py  test_retrier.py  test_slack.py  test_tracker.py
